--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                       <div class="my-detail">
                     	
                         <div class="white-spacing">
-                            <h1>Alex Parker</h1>
-                            <span>Web Developer</span>
+                            <h1>Abhinav Adepu</h1>
+                            <span>Mobile Web Specialist</span>
                         </div> 
                        
                        <ul class="social-icon">
